fixes because dark mode

--- a/src/components/badge/_badge.scss
+++ b/src/components/badge/_badge.scss
@@ -49,5 +49,4 @@ $badgeTypes: (
 
 .euiBadge--ghost {
   border-color: $euiColorLightShade;
-  background-color: $euiColorGhost;
 }
