--- a/src/components/form/field_proxy/_field_proxy.scss
+++ b/src/components/form/field_proxy/_field_proxy.scss
@@ -16,3 +16,7 @@
 .euiFieldProxy-invalid {
   @include euiFormControlStyleInvalid;
 }
+
+.euiFieldProxy__proxySource {
+  color: currentColor;
+}
